# Differentiable_TMM

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
differentiable_tmm/: TMM.py  __init__.py  chromaticity_store.py  color_transformation.py  datatype_restriction.py  illumination_store.py  module.py  observer_store.py  spectrum_interpolation.py
example/: _paths.py  example1.py  example2.py  example3.py  example4.py  example5.py
example/assets/: Si3N4.txt  SiO2.txt
